fixed photo overlap

--- a/assets/style.css
+++ b/assets/style.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
 }
 body {
-    background-color: lightgray;
+    background-color: rgb(211, 211, 211);
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -127,5 +127,5 @@ hr{
 }
 .food-display{
   margin-bottom: 0px;
-  height: 23px;
+  
 }
